--- a/src/.env
+++ b/src/.env
@@ -1,11 +1,13 @@
-REACT_APP_FIREBASE_KEY=AIzaSyCb0DOP2eAWLusfv9_BGTdWW7ZMwHE89t4
+REACT_APP_API_KEY=AIzaSyCb0DOP2eAWLusfv9_BGTdWW7ZMwHE89t4
 
-REACT_APP_appId=1:466637629581:web:92c71c2f857639fc0e9ac4
+REACT_APP_AUTH_DOMAIN=hcidp4.firebaseapp.com
 
-REACT_APP_authDomain=hcidp4.firebaseapp.com
+REACT_APP_DATABASE_URL=https://hcidp4-default-rtdb.asia-southeast1.firebasedatabase.app
 
-REACT_APP_projectId=hcidp4
+REACT_APP_PROJECT_ID=hcidp4
 
-REACT_APP_storageBucket=hcidp4.appspot.com
+REACT_APP_STORAGE_BUCKET=hcidp4.appspot.com
 
-REACT_APP_messagingSenderId=466637629581
+REACT_APP_MESSAGING_SENDER_ID=466637629581
+
+REACT_APP_APP_ID=1:466637629581:web:92c71c2f857639fc0e9ac4
