--- a/.env
+++ b/.env
@@ -11,3 +11,5 @@ REACT_APP_STORAGE_BUCKET=hcidp4.appspot.com
 REACT_APP_MESSAGING_SENDER_ID=466637629581
 
 REACT_APP_APP_ID=1:466637629581:web:92c71c2f857639fc0e9ac4
+
+REACT_APP_MEASUREMENT_ID=G-YPTKNQG4KY
