--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "swiper": "^6.6.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
