--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.15.6",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.21.3",
